--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 images
 lernen.md
-t1.py
-t2.py
-t3.py
-t4.py
-t5.py
-t6.py
-t7.py
-t8.py
-t9.py
-t10.py
+tested
+
 
 select_sqlite.py
 select_2.py
